# meli_application

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  app.py  appspec.yml  docker-compose-migrations.yml  docker-compose-test.yml  docker-compose.yml  env.enc  requirements.txt  run.sh  tatus  test.sh
.github/workflows/: build.yml  ci.yml
analyzer/: algorithms.py  analyzer_utils.py  config.py  constants.py  controller.py  data_generator.py  gateway.py
codedeploy/: after_install.sh  app.service  application_start.sh  application_stop.sh  appspec.yml  before_install.sh  check_service.sh
codedeploy/scripts/: after_install.sh  before_install.sh  check_service.sh  start_service.sh  stop_service.sh
db/migrations/: 2021052100000_initial_migration.sql
loadtest/: jmeter_load_test.jmx
src/: main.rs
test/: test_algorithms.py  test_analyzer_utils.py  test_controller.py  test_data_generator.py  test_gateway.py  testspec.yml
